--- a/rpm/hawaii-wallpapers.yaml
+++ b/rpm/hawaii-wallpapers.yaml
@@ -18,4 +18,6 @@ ConfigOptions:
     - -DCMAKE_BUILD_TYPE=RelWithDebInfo 
 
 Files:
+    - "%dir %{_datadir}/backgrounds/hawaii"
     - "%{_datadir}/backgrounds/hawaii/"
+    - "%{_datadir}/hawaii/wallpapers/"
